# gmm_util

./: .gitignore  LICENSE  README.md  setup.cfg
src/gmm_model/: gmm.py  util.py
src/gmm_util/: gmm.py  util.py
tests/: test_gmm_util.py
