[metadata]
name = gmm_model
description = GMM Model Class for the GMM Learner I_Bayes_rule and Multi_Daft
author = Michael Volpp and Philipp Dahlinger
license = MIT 
license_file = LICENSE
platforms = linux, osx
version = 0.0.1
classifiers = 
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only

[options]
python_requires = 
    >=3.8
install_requires =
    tensorflow>=2.7
    tensorflow-probability>=0.15
package_dir =
    =src
packages =
    gmm_model

[options.extras_require] =
    dev = pytest; black
