[metadata]
name = gmm_util
description = Utilities for Learning with Gaussian Mixture Models in TensorFlow
author = Michael Volpp, Philipp Dahlinger, Oleg Arenz
license = MIT 
license_file = LICENSE
platforms = linux, osx
version = 0.0.1
classifiers = 
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only

[options]
python_requires = 
    >=3.8
install_requires =
    tensorflow>=2.7
    tensorflow-probability>=0.15
package_dir =
    =src
packages =
    gmm_util

[options.extras_require] =
    dev = pytest; black
